--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "composite": true,
+    "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "skipLibCheck": true,
-    "strict": false
+    "strict": true,
   },
   "include": ["vite.config.ts"]
 }
